--- a/home/dot_condarc.tmpl
+++ b/home/dot_condarc.tmpl
@@ -16,9 +16,9 @@ pip_interop_enabled: true
 channel_priority: flexible
 unsatisfiable_hints: true
 envs_dirs:
-  - {{ .condadir }}\envs
+  - {{ .condapath }}/envs
 pkgs_dirs:
-  - {{ .condadir }}\pkgs
+  - {{ .condapath }}/pkgs
 repodata_threads: 4
 variables:
   CRYPTOGRAPHY_OPENSSL_NO_LEGACY: 1
