--- a/home/dot_config/cabal/config.tmpl
+++ b/home/dot_config/cabal/config.tmpl
@@ -25,7 +25,7 @@ repository hackage.haskell.org
 -- store-dir:
 -- active-repositories:
 -- local-no-index-repo:
-remote-repo-cache: D:\Apps\cabal\packages
+remote-repo-cache: {{$cabalpath}}\packages
 -- logs-dir: D:\Apps\cabal\logs
 -- default-user-config:
 -- verbose: 1
@@ -33,8 +33,8 @@ remote-repo-cache: D:\Apps\cabal\packages
 -- cabal-file:
 -- with-compiler:
 -- with-hc-pkg:
--- program-prefix: 
--- program-suffix: 
+-- program-prefix:
+-- program-suffix:
 -- library-vanilla: True
 -- library-profiling:
 -- shared:
@@ -57,14 +57,14 @@ remote-repo-cache: D:\Apps\cabal\packages
 -- user-install: True
 -- package-db:
 -- flags:
-extra-include-dirs: D:\msys64\mingw64\include
+extra-include-dirs: {{$msyspath}}\mingw64\include
 -- deterministic:
 -- cid:
-extra-lib-dirs: D:\msys64\mingw64\lib
+extra-lib-dirs: {{$msyspath}}\mingw64\lib
 -- extra-lib-dirs-static:
 -- extra-framework-dirs:
 -- Would also need install folder if cabal installed in stand-alone folder: D:\cabal\bin
-extra-prog-path: D:\ghcup\bin;D:\msys64\mingw64\bin;D:\msys64\usr\bin
+extra-prog-path: D:\ghcup\bin;{{$msyspath}}\mingw64\bin;{{$msyspath}}\usr\bin
 -- instantiate-with:
 -- tests: False
 -- coverage: False
