Add cabal path.

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -60,7 +60,7 @@ encryption = "gpg"
     quartopath = "{{ $quartopath }}"
     sparkversion = "{{ $sparkversion }}"
     stackpath = "{{ $stackpath }}"
-    cabalpath = 'D:\Apps\cabal'
+    cabalpath = "{{ $cabalpath }}"
     msyspath = "{{ $msyspath}}"
 [cd]
     command = "pwsh"
