Update RStudio prefs.

--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -6,7 +6,7 @@
     "strip_trailing_whitespace": true,
     "syntax_color_console": true,
     "highlight_r_function_calls": true,
-    "editor_theme": "Blue Thunder",
+    "editor_theme": "Night Owl {rsthemes}",
     "default_encoding": "UTF-8",
     "document_author": "Ajay Mehta",
     "show_rmd_render_command": true,
@@ -45,5 +45,5 @@
     "source_with_echo": true,
     "default_latex_program": "XeLaTeX",
     "graphics_backend": "ragg",
-    "sync_files_pane_working_dir": true
+    "global_theme": "alternate"
 }
