--- a/home/dot_condarc.tmpl
+++ b/home/dot_condarc.tmpl
@@ -23,3 +23,6 @@ repodata_threads: 4
 variables:
   CRYPTOGRAPHY_OPENSSL_NO_LEGACY: 1
 use_only_tar_bz2: false
+#solver: classic
+# https://ohmyposh.dev/docs/faq#conda-environment-name-displayed-in-front-of-the-prompt
+changeps1: false
