Fix conda section.

--- a/home/Documents/PowerShell/profile.ps1.tmpl
+++ b/home/Documents/PowerShell/profile.ps1.tmpl
@@ -1,3 +1,4 @@
+
 $env:LC_ALL = 'C.UTF-8'
 $env:ConEmuANSI = $True
 $env:DELTA_PAGER = 'less -rFX'
@@ -98,14 +99,11 @@ Set-PoshPrompt -Theme '~\oh-my-posh\cool.omp.json'
 #endregion
 
 #region conda initialize
-# !! Contents within this block are managed by 'conda init' !!
-(& '{{ .condapath | replaceAllRegex "/" "\\" }}\Scripts\conda.exe' 'shell.powershell' 'hook') | Out-String | Invoke-Expression
-
-# https://stackoverflow.com/a/56186333/781045
-$Env:CONDA_DLL_SEARCH_MODIFICATION_ENABLE = 1
-
-conda deactivate base
-
+$condaExe = '{{ .condapath | replaceAllRegex "/" "\\" }}\Scripts\conda.exe'
+If (Test-Path $condaExe) {
+    (& $condaExe "shell.powershell" "hook") | Out-String | Where-Object {$_} | Invoke-Expression
+}
+Remove-Variable condaExe -ErrorAction Ignore
 #endregion
 
 #region fzf
@@ -169,7 +167,7 @@ if ($env:TERM_PROGRAM -eq 'vscode') { . "$(code --locate-shell-integration-path 
 
 Import-Module Microsoft.PowerShell.SecretStore, Microsoft.PowerShell.SecretManagement
 
-$env:Path += ';{{ .quartopath | replaceAllRegex "/" "\\" }}'
+$env:Path += ';D:\Apps\Quarto\bin'
 
 # https://github.com/microsoft/winget-cli/blob/master/doc/Completion.md
 Register-ArgumentCompleter -Native -CommandName winget -ScriptBlock {
