--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -14,6 +14,7 @@
     fsync = committed,added,commit-graph
     fsyncMethod = batch
     sshCommand = ssh -q
+	autocrlf = true
 [include]
     path = themes.gitconfig
     path = delta.gitconfig
