--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -216,3 +216,13 @@
 # https://stackoverflow.com/a/71904131/781045
 [safe]
     directory = *
+[maintenance "commit-graph"]
+    enabled = true
+[maintenance "prefetch"]
+    enabled = true
+[maintenance "incremental-repack"]
+    enabled = true
+[maintenance "loose-objects"]
+    enabled = true
+[maintenance "pack-refs"]
+    enabled = true
