--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -6,7 +6,7 @@
     "strip_trailing_whitespace": true,
     "syntax_color_console": true,
     "highlight_r_function_calls": true,
-    "editor_theme": "Night Owl {rsthemes}",
+    "editor_theme": "Blackboard Black",
     "default_encoding": "UTF-8",
     "document_author": "Ajay Mehta",
     "show_rmd_render_command": true,
@@ -15,7 +15,7 @@
     "console_double_click_select": true,
     "style_diagnostics": true,
     "rmd_viewer_type": "pane",
-    "{{ .chezmoi.os }}_terminal_shell": "custom",
+    "windows_terminal_shell": "custom",
     "custom_shell_command": "C:/Program Files/PowerShell/7/pwsh.exe",
     "jobs_tab_visibility": "shown",
     "cran_mirror": {
@@ -45,5 +45,8 @@
     "source_with_echo": true,
     "default_latex_program": "XeLaTeX",
     "graphics_backend": "ragg",
-    "global_theme": "alternate"
+    "global_theme": "alternate",
+    "python_type": "conda",
+    "python_version": "3.11.7",
+    "python_path": "{{ .condapath }}/envs/r-reticulate/python.exe"
 }
