Uncomment logs-dir.

--- a/home/dot_config/cabal/config.tmpl
+++ b/home/dot_config/cabal/config.tmpl
@@ -26,7 +26,7 @@ repository hackage.haskell.org
 -- active-repositories:
 -- local-no-index-repo:
 remote-repo-cache: {{ .cabalpath }}\packages
--- logs-dir: {{ .cabalpath }}\logs
+   logs-dir: {{ .cabalpath }}\logs
 -- default-user-config:
 -- verbose: 1
 -- compiler: ghc
