--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -47,8 +47,8 @@ encryption = "gpg"
     gpgkey = "{{ $gpgkey }}"
     gpgpath = "{{ $gpgpath }}"
     condapath = "{{ $condapath }}"
-    npmcache = "{{ $npmcache }}"
-    npmprefix = "{{ $npmprefix }}"
+    npmcache = '{{ $npmcache }}'
+    npmprefix = '{{ $npmprefix }}'
     # Must use '/' to avoid Go doubling '\'
     nugetpkgs = "{{ $nugetpkgs }}"
     rworkingdir = "{{ $rworkingdir }}"
@@ -57,8 +57,8 @@ encryption = "gpg"
     cmdstandir = "{{ $cmdstandir }}"
     quartopath = "{{ $quartopath }}"
     stackpath = "{{ $stackpath }}"
-    cabalpath = "{{ $cabalpath }}"
-    msyspath = "{{ $msyspath}}"
+    cabalpath = '{{ $cabalpath }}'
+    msyspath = '{{ $msyspath}}'
 [cd]
     command = "pwsh"
 [completion]
