--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -49,6 +49,7 @@
     untracked = ls-files --others --exclude-standard
     unstage = restore --staged
     cnv = commit --no-verify
+	grepd = -c core.pager=delta grep
 
     ## Push to remote
     please = push --force-with-lease
