Update cabal config.

--- a/home/dot_config/cabal/config.tmpl
+++ b/home/dot_config/cabal/config.tmpl
@@ -10,7 +10,7 @@
 -- This config file was generated using the following versions
 -- of Cabal and cabal-install:
 -- Cabal library version: 3.10.2.1
--- cabal-install version: 3.10.2.0
+-- cabal-install version: 3.10.2.1
 
 
 repository hackage.haskell.org
@@ -26,7 +26,8 @@ repository hackage.haskell.org
 -- active-repositories:
 -- local-no-index-repo:
 remote-repo-cache: {{ .cabalpath }}\packages
-   logs-dir: {{ .cabalpath }}\logs
+logs-dir: {{ .cabalpath }}\logs
+-- logs-dir: {{ .cabalpath }}\logs
 -- default-user-config:
 -- verbose: 1
 -- compiler: ghc
