Add section for git-absorb.

--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -221,6 +221,9 @@
 # https://stackoverflow.com/a/71904131/781045
 [safe]
     directory = *
+[absorb]
+    maxStack = 15
+    fixupTargetAlwaysSHA = true
 [maintenance "commit-graph"]
     enabled = true
 [maintenance "prefetch"]
