--- a/home/Documents/PowerShell/profile.ps1.tmpl
+++ b/home/Documents/PowerShell/profile.ps1.tmpl
@@ -177,6 +177,11 @@ if ($env:TERM_PROGRAM -eq 'vscode') { . "$(code --locate-shell-integration-path 
 Import-Module Microsoft.PowerShell.SecretStore, Microsoft.PowerShell.SecretManagement
 
 $env:Path += ';D:\Apps\Quarto\bin'
+if (Test-Path Env:/SPARK_HOME)
+{
+    $env:Path += (Join-Path $env:SPARK_HOME bin)
+}
+
 
 # WinGet
 
