--- a/home/dot_Renviron.tmpl
+++ b/home/dot_Renviron.tmpl
@@ -1,4 +1,4 @@
-PATH="${RTOOLS44_HOME}\usr\bin;${RTOOLS44_HOME}\ucrt64\bin;${RTOOLS44_HOME}\mingw64\bin;{{ .cmdstandir }}/stan/lib/stan_math/lib/tbb;${PATH}"
+PATH="${RTOOLS44_HOME}\usr\bin;${RTOOLS44_HOME}\ucrt64\bin;${RTOOLS44_HOME}\mingw64\bin;${PATH}"
 
 plotly_username={{- (keepassxc "PLOTLY").UserName }}
 plotly_api_key={{- (keepassxc "PLOTLY").Password }}
