--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -50,6 +50,9 @@
     unstage = restore --staged
     cnv = commit --no-verify
     grepd = -c core.pager=delta grep
+    # Use fzf to select branch to checkout
+    gcb = !git branch | fzf --bind 'enter:become(git checkout {-1})'
+    gcbp = !git branch | fzf --preview 'git show --color=always {-1}' --bind 'enter:become(git checkout {-1})'
 
     ## Push to remote
     please = push --force-with-lease
