Update settings + console history.

--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -6,7 +6,7 @@
     "strip_trailing_whitespace": true,
     "syntax_color_console": true,
     "highlight_r_function_calls": true,
-    "editor_theme": "Blackboard Black",
+    "editor_theme": "Fastverse Dark Italic",
     "default_encoding": "UTF-8",
     "document_author": "Ajay Mehta",
     "show_rmd_render_command": true,
@@ -46,7 +46,6 @@
     "default_latex_program": "XeLaTeX",
     "graphics_backend": "ragg",
     "global_theme": "alternate",
-    "python_type": "conda",
-    "python_version": "3.11.7",
-    "python_path": "{{ .condapath }}/envs/r-reticulate/python.exe"
+    "sync_files_pane_working_dir": true,
+    "insert_native_pipe_operator": true
 }
