Minor update for profile.ps1

--- a/home/Documents/PowerShell/profile.ps1.tmpl
+++ b/home/Documents/PowerShell/profile.ps1.tmpl
@@ -50,7 +50,7 @@ if (!(Get-Module -Name PSReadLine)) {
 Import-Module -Name CompletionPredictor, DirectoryPredictor
 Set-PSReadLineOption -PredictionSource HistoryAndPlugin
 
-function Set-EnvVar {
+function Set-EnvVar([bool]$originalStatus) {
     $env:POSH = if (-not (Get-Module -Name PSReadLine)) {
         $False
     } else {
